add form for test

--- a/src/app/pokemon-add/pokemon-add.component.html
+++ b/src/app/pokemon-add/pokemon-add.component.html
@@ -1,3 +1,29 @@
-<p>
-  pokemon-add works!
-</p>
+<div class="container">
+  <h2 class="center">Formacion profesional</h2>
+  <form>
+    <div class="row">
+      <div class="col-6">
+        <div class="form-group">
+          <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Institutcion">
+        </div>
+        <div class="form-group">
+          <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Fecha de Inicio">
+        </div>
+        <div class="form-group">
+          <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Fecha de Finalizacion">
+        </div>
+        <div class="form-group">
+          <button type="button" class="btn btn-success">Guardar</button>
+          <button type="button" class="btn btn-warning ml-3">Limpiar</button>
+        </div>
+
+      </div>
+      <div class="col-6">
+        <div class="form-group">
+          <textarea class="form-control" id="exampleFormControlTextarea1" rows="6"
+            placeholder="Funcion principal desearrollada"></textarea>
+        </div>
+      </div>
+    </div>
+  </form>
+</div>
